<resources>
    <string name="app_name">RentApp</string>
    <string name="title_activity_mapa_con_las_oficinas">Map</string>
    <string name="title_activity_mapa_con_las_oficinas2">Map2</string>
    <string name="reserva_vehiculo">Reservar vehículos</string>
    <string name="ver_reservas">Ver reservas</string>
    <string name="ver_vehiculos">Ver vehículos</string>
    <string name="encontrar_oficinas">Encontrar oficinas</string>
    <string name="reservas">Reservas</string>
    <string name="ver_oficinas">Ver oficinas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="ayuda">Ayuda</string>

    /**Activity Main*/
    <string name="btnReservaVehiculo">Reservar vehiculos</string>
    <string name="btn_acciones_bd">Vehiculos BBDD</string>
    <string name="btn_ver_veh">Vehiculos</string>
    <string name="btnBDOficinas">Oficinas BBDD</string>
    <string name="btn_ver_ofi">Oficinas</string>
    <string name="btn_reservas">Mis Reservas</string>
    <string name="btn_prueba_login3">Cerrar sesion</string>
    /**Activity Ayuda*/
    <string name="correo_a_ayuda">Correo</string>
    <string name="nombre_a_ayuda">Nombre</string>
    <string name="apellidos_a_ayuda">Apellidos</string>
    <string name="telefono_a_ayuda">Teléfono</string>

    <string name="et_fecha_inicio">Fecha de inicio</string>
    <string name="et_fecha_fin">Fecha de fin</string>

    /**Activity Reservar Vehículos*/
    <string name="punto_recogida">Punto de recogida</string>
    <string name="oficina">Oficina</string>
    <string name="punto_devolucion">Punto de devolución</string>
    <string name="btn_fecha_inicio">Fecha recogida</string>
    <string name="button_consultar_disp">Consultar disponibilidad</string>
    <string name="btn_fecha_fin">Fecha</string>
    <string name="btn_mapa_reserva">Lugar</string>
    <string name="consultar_disponibilidad">Consultar disponibilidad</string>
    <string name="et_lugar_recogida">Lugar</string>
    <string name="et_lugar_entrega">Lugar</string>
    <string name="btn_lugar_recogida">Lugar de recogida</string>
    <string name="btn_lugar_entrega">Lugar de entrega</string>
    <string name="txt_dia_recogida">Dia de recogida</string>
    <string name="txt_dia_entrega">Dia de entrega</string>

    /*Activity Ver Vehículos*/
    <string name="tv1">Selecciona una Matricula</string>
    <string name="btn_ver">consultar</string>
    <string name="tv2">Selecciona una nombre</string>
    <string name="btn_ver2">consultar</string>

    /*Activity Acciones BD*/
    <string name="int_matricula">Matrícula</string>
    <string name="chr_categoria">Categoría</string>
    <string name="txt_marca">Marca</string>
    <string name="txt_modelo">Modelo</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="real_precio">Precio</string>
    <string name="BotonRegistrar">Registrar vehiculo</string>
    <string name="BotonBuscar">Buscar vehiculo</string>
    <string name="BotonEliminar">Eliminar vehiculo</string>
    <string name="BotonModificar">Modificar vehiculo</string>

    /*Activity Acciones Oficinas BD*/
    <string name="txt_nombreOfi">Oficina</string>
    <string name="txt_matricula">Matricula</string>
    <string name="real_lat">latitud</string>
    <string name="real_long">longitud</string>
    <string name="BotonRegistrarOficina">Registrar oficina</string>
    <string name="BotonConsultarOficina">Consultar oficina</string>
    <string name="BotonModificarOficina">Modificar oficina</string>
    <string name="txt_EliminaOficina">Eliminar oficina</string>

    <string name="elugar_resumen">Lugar</string>
    <string name="efecha_resumen">fecha</string>
    <string name="ehora_resumen">hora</string>
    <string name="elugar2_resumen">lugar</string>
    <string name="efecha2_resumen">fecha</string>
    <string name="ehora2_resumen">hora</string>

    /*Activity Acciones Reservas BD*/
    <string name="int_codigo_res">Codigo</string>
    <string name="txt_fecha_inicio_res">Fecha Recogida</string>
    <string name="txt_fecha_vuelta_res">Fecha Devolucion</string>
    <string name="txt_matricula_res">Matricula</string>
    <string name="txt_oficina_res">Oficina</string>
    <string name="txt_dni_res">DNI</string>
    <string name="txt_registrarReserva">Registrar reserva</string>
    <string name="txt_consultarReserva">Consultar reserva</string>
    <string name="txt_modificarReserva">Modificar reserva</string>
    <string name="txt_elminarReserva">Eliminar resreva</string>

    /* Actividad Resumen_Reserva*/
    <string name="fecha_recogida_resumen">Fecha recogida</string>
    <string name="lugar_recogida_resumen">Lugar recogida</string>
    <string name="fecha_devolucion_resumen">Fecha devolucion</string>
    <string name="lugar_devolucion_resumen">Lugar devolucion</string>
    <string name="volver_reserva_vehiculos">Volver</string>
    <string name="continuarRegistroUsuario">Continuar</string>

    /* Actividad Confirmar_Reserva*/
    <string name="fecha_recogida_resumen2">Fecha recogida</string>
    <string name="elugar_recogida_resumen2">Lugar recogida</string>
    <string name="efecha2_resumen2">Fecha devolucion</string>
    <string name="btn_confirmarReserva">Confirmar Reserva</string>
    <string name="et_vehiculoSeleccionado">Vehiculo seleccionado</string>
    <string name="tv_confirma_datos">Confirmar datos</string>
    <string name="txt_cofirmar">Por favor, asegúrese de que los datos de la reserva son correctos antes de confirmar</string>
    <string name="btn_cancelarConfirmacion">Cancelar Reserva</string>
    <string name="tv_confNombre">Nombre: </string>
    <string name="tv_confApellidos">Apellidos: </string>
    <string name="tv_confTelefono">Teléfono: </string>
    <string name="tv_confDni">DNI: </string>
    <string name="tv_confEmail">Email: </string>
    <string name="tv_confLugarRecogida">Oficina de recogida: </string>
    <string name="tv_confFechaIni">Fecha de recogida: </string>
    <string name="tv_confFechaFin">Fecha de entrega: </string>
    <string name="tv_confMatricula">Matrícula: </string>
    <string name="tv_confPrecio">Precio (€): </string>

    /* Actividad Seleccionar_vehiculo */
    <string name="btn_seleccionar_veh">Seleccionar</string>
    <string name="btn_ver_detalles">Ver detalles</string>
    <string name="marca_adapter">Marca: </string>
    <string name="modelo_adapter">Modelo: </string>
    <string name="matricula_adapter">Matricula: </string>
    <string name="precio_adapter">Precio por día (€): </string>

    /* Usuarios */
    <string name="etNombre">Nombre</string>
    <string name="etUsuario">Usuario</string>
    <string name="etEmail">Email</string>
    <string name="etPass">Contraseña</string>
    <string name="etDni">DNI</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etTelefono">Telefono</string>
    <string name="btnRegistrarUsuario">Registrar</string>
    <string name="btnCancelarRegistro">Cancelar</string>


    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnRegistrate">Registrate</string>
    <string name="Bienvenida">Bienvenido a RentApp</string>

    <string name="tv_credenciales">Credenciales</string>
    <string name="vehiculo_seleccionado">Vehiculo Seleccionado</string>

    <string name="btn_scanerQR">Escaner QR</string>

    /*Actividad ver reservas*/
    <string name="btn_eliminar_res">Eliminar Reserva</string>
    <string name="txt_codigo">Codigo</string>
    <string name="txt_fechaInicio">fecha inicio</string>
    <string name="txt_fechaFin">fecha fin</string>
    <string name="txt_matricula2">matricula</string>
    <string name="txt_oficina">oficina</string>
    <string name="txt_dni">dini</string>
    <string name="et_inserte_codigo">Inserte el código de la reserva que desea eliminar</string>
    <string name="txt_nombre">Nombre:</string>
    <string name="btn_volver_main">Volver</string>




</resources>