<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="376dp"
        android:layout_height="582dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_credenciales">

        <Button
            android:id="@+id/btnReservaVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnReservaVehiculo"
            android:onClick="Actividad_Reserva_adelante"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn_acciones_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_acciones_bd"
            android:onClick="Actividad_Acciones_BD"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn_ver_veh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_ver_veh"
            android:onClick="Actividad_Ver_Vehiculos"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btnBDOficinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnBDOficinas"
            android:onClick="Actividad_Acciones_Oficinas_BD"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn_ver_ofi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_ver_ofi"
            android:onClick="Actividad_Ver_Oficinas"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn_reservas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_reservas"
            android:onClick="Actividad_Acciones_Reservas_BD"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn_prueba_login3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_prueba_login3"
            android:onClick="Cerrar_Sesion"
            app:backgroundTint="@color/blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_credenciales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_credenciales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>