<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Acciones_Reservas_BD">

    <Button
        android:id="@+id/btn_registrar_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_border"
        android:onClick="RegistrarReserva"
        android:text="@string/txt_registrarReserva"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dni_res" />

    <Button
        android:id="@+id/btn_consultar_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border"
        android:onClick="BuscarReserva"
        android:text="@string/txt_consultarReserva"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar_res" />

    <Button
        android:id="@+id/btn_modificar_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_border"
        android:onClick="ModificarReserva"
        android:text="@string/txt_modificarReserva"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultar_res" />

    <Button
        android:id="@+id/btn_eliminar_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_border"
        android:onClick="EliminarReserva"
        android:text="@string/txt_elminarReserva"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar_res" />

    <EditText
        android:id="@+id/txt_fecha_inicio_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/txt_fecha_inicio_res"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/int_codigo_res" />

    <EditText
        android:id="@+id/txt_fecha_vuelta_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_fecha_vuelta_res"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha_inicio_res" />

    <EditText
        android:id="@+id/txt_matricula_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/txt_matricula_res"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha_vuelta_res" />

    <EditText
        android:id="@+id/txt_oficina_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/txt_oficina_res"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_matricula_res" />

    <EditText
        android:id="@+id/txt_dni_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txt_dni_res"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_oficina_res" />

    <EditText
        android:id="@+id/int_codigo_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/int_codigo_res"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>